--- a/src/main/resources/static/common/common.css
+++ b/src/main/resources/static/common/common.css
@@ -41,3 +41,9 @@ html > body {
     text-overflow: ellipsis; /* 넘치는 부분에 ... 표시 */
     max-width: 100px; /* 텍스트 영역의 최대 너비 설정 */
 }
+
+#memailconfirmTxt {
+    color: black;
+    font-weight: bold;
+    font-size: 10px;
+}
