--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -98,13 +98,13 @@
                         "email": $memail.val()
                     },
                     success: function (data) {
-                        alert("해당 이메일로 인증번호 발송이 완료되었습니다. \n 확인부탁드립니다.")
+                        toastNotice('해당 이메일로 인증번호 발송이 완료되었습니다.<br>확인부탁드립니다.');
                         console.log("data : " + data);
                         $("#memailconfirm").prop("disabled", false);
                         chkEmailConfirm(data, $memailconfirm, $memailconfirmTxt);
                     },
                     error: function() {
-                        alert("인증번호 발송에 실패했습니다. 다시 시도해주세요.");
+                        toastWarning('인증번호 발송에 실패했습니다.<br>다시 시도해주세요.');
                         console.log("Error: 유효하지 않은 이메일입니다.");
                     }
                 })
