--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -160,7 +160,7 @@
             <div>
                 <input type="text" class="input input-bordered" name="memail" id="memail" placeholder="이메일을 입력해주세요.">
             </div>
-            <button class="btn btn-outline-primary" type="button" id="checkEmail">인증번호 발송</button>
+            <button class="btn btn-accent" type="button" id="checkEmail">인증번호 발송</button>
             <div class="flex flex-col">
                 <label for="memailconfirm" id="memailconfirmTxt">인증번호를 입력해주세요.</label>
                 <input type="text" class="input input-bordered" name="code" id="memailconfirm" placeholder="인증번호는 8자리 입니다." disabled>
