--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -6,7 +6,7 @@
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <script>
-        emconfirmchk = false;
+        emailConfirmCheck = false;
 
         function JoinForm__submit(form) {
             // username 이(가) 올바른지 체크
@@ -57,7 +57,7 @@
                 return;
             }
 
-            if (emconfirmchk == false) {
+            if (emailConfirmCheck == false) {
                 toastWarning('인증번호가 잘못되었습니다.');
                 form.code.focus();
                 return;
@@ -83,11 +83,11 @@
         }
 
         $(function() {
-            var $memail = $("#memail");
+            var $email = $("#email");
 
             var $checkEmail = $("#checkEmail"); // 인증번호 발송 버튼
-            var $memailconfirm = $("#memailconfirm"); // 인증번호 확인input
-            var $memailconfirmTxt = $("#memailconfirmTxt"); // 인증번호 확인 txt
+            var $emailConfirm = $("#emailConfirm"); // 인증번호 확인input
+            var $emailConfirmTxt = $("#emailConfirmTxt"); // 인증번호 확인 txt
 
             // 이메일 인증번호
             $checkEmail.click(function () {
@@ -95,13 +95,13 @@
                     type: "POST",
                     url: "/member/login/mailConfirm",
                     data: {
-                        "email": $memail.val()
+                        "email": $email.val()
                     },
                     success: function (data) {
                         toastNotice('해당 이메일로 인증번호 발송이 완료되었습니다.<br>확인부탁드립니다.');
                         console.log("data : " + data);
-                        $("#memailconfirm").prop("disabled", false);
-                        chkEmailConfirm(data, $memailconfirm, $memailconfirmTxt);
+                        $("#emailConfirm").prop("disabled", false);
+                        chkEmailConfirm(data, $emailConfirm, $emailConfirmTxt);
                     },
                     error: function() {
                         toastWarning('인증번호 발송에 실패했습니다.<br>다시 시도해주세요.');
@@ -111,12 +111,12 @@
             })
 
             // 이메일 인증번호 체크 함수
-            function chkEmailConfirm(data, $memailconfirm, $memailconfirmTxt) {
-                $memailconfirm.on("keyup", function () {
-                    if (data != $memailconfirm.val()) { //
-                        emconfirmchk = false;
-                        $memailconfirmTxt.html("<span id='emconfirmchk'>인증번호가 잘못되었습니다</span>")
-                        $("#emconfirmchk").css({
+            function chkEmailConfirm(data, $emailConfirm, $emailConfirmTxt) {
+                $emailConfirm.on("keyup", function () {
+                    if (data != $emailConfirm.val()) { //
+                        emailConfirmCheck = false;
+                        $emailConfirmTxt.html("<span id='emailConfirmCheck'>인증번호가 잘못되었습니다</span>")
+                        $("#emailConfirmCheck").css({
                             "color": "#FA3E3E",
                             "font-weight": "bold",
                             "font-size": "10px"
@@ -124,10 +124,10 @@
                         })
                         //console.log("중복아이디");
                     } else { // 아니면 중복아님
-                        emconfirmchk = true;
-                        $memailconfirmTxt.html("<span id='emconfirmchk'>인증번호 확인 완료</span>")
+                        emailConfirmCheck = true;
+                        $emailConfirmTxt.html("<span id='emailConfirmCheck'>인증번호 확인 완료</span>")
 
-                        $("#emconfirmchk").css({
+                        $("#emailConfirmCheck").css({
                             "color": "#0D6EFD",
                             "font-weight": "bold",
                             "font-size": "10px"
@@ -158,12 +158,12 @@
             </div>
 
             <div>
-                <input type="text" class="input input-bordered" name="memail" id="memail" placeholder="이메일을 입력해주세요.">
+                <input type="text" class="input input-bordered" name="email" id="email" placeholder="이메일을 입력해주세요.">
             </div>
             <button class="btn btn-accent" type="button" id="checkEmail">인증번호 발송</button>
             <div class="flex flex-col">
-                <label for="memailconfirm" id="memailconfirmTxt">인증번호를 입력해주세요.</label>
-                <input type="text" class="input input-bordered" name="code" id="memailconfirm" placeholder="인증번호는 8자리 입니다." disabled>
+                <label for="emailConfirm" id="emailConfirmTxt">인증번호를 입력해주세요.</label>
+                <input type="text" class="input input-bordered" name="code" id="emailConfirm" placeholder="인증번호는 8자리 입니다." disabled>
             </div>
 
             <div class="mb-3">
