design: 메인페이지 나의 문제집 총 3개만 보이도록 설정

--- a/src/main/resources/templates/usr/book/top/list.html
+++ b/src/main/resources/templates/usr/book/top/list.html
@@ -13,7 +13,7 @@
 
     <div th:if="${@rq.login}"
          class="flex justify-end w-full">
-        <a href="#"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
+        <a href="/book/create"><i class="fa-regular fa-pen-to-square mr-5"></i></a>
     </div>
 
 </div>
