--- a/src/main/resources/templates/usr/home/fragment/index/books.html
+++ b/src/main/resources/templates/usr/home/fragment/index/books.html
@@ -4,8 +4,8 @@
 
     <div class="carousel w-80 min-h-24">
 
-        <a th:if="${books.size > 0}"
-           th:each="book : ${books}"
+        <a th:each="book, loop : ${books}"
+           th:if="${books.size > 0 and loop.index <= 2}"
            th:href="@{/underline/book/{id}(id=${book.id})}"
            class="carousel-item w-64 flex justify-집center mr-10">
 
@@ -34,9 +34,9 @@
 
         <a th:if="${books.size > 0}"
            href="/book/list"
-           class="carousel-item w-64 flex justify-center">
+           class="carousel-item w-40 flex justify-center">
 
-            <div class="stats shadow w-64 flex">
+            <div class="stats shadow w-40 flex">
                 <div class="stat place-items-center">
                     <div class="stat-title">더보기</div>
                     <div class="text-xs">모든 문제집 확인하기</div>
@@ -51,7 +51,7 @@
 
             <div class="stats shadow w-80 flex">
                 <div class="stat place-items-center">
-                    <div class="stat-title">문제집 만들기</div>
+                    <div class="stat-title">나만의 문제집 만들기</div>
                     <div class="text-xs">밑줄 문제 묶음을 만들어 보세요!</div>
                     <div class="stat-desc"></div>
                 </div>
