--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -65,7 +65,7 @@
             <div class="flex flex-col gap-0 items-center justify-center">
                 <a href="/member/join" class="link link-hover">회원가입</a>
                 <div class="flex flex-row items-center justify-center">
-                    <a href="#" class="link link-hover mr-3">아이디 찾기</a>
+                    <a href="/member/find/id" class="link link-hover mr-3">아이디 찾기</a>
                     |
                     <a href="#" class="link link-hover ml-3">비밀번호 찾기</a>
                 </div>
