feat: 검색창 구현

--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -19,10 +19,10 @@
             문제 풀기
         </span>
     </a>
-    <a th:href="@{/category/list}" class="flex col">
-        <i class="fa-solid fa-list-ul"></i>
+    <a th:href="@{/search/main}" class="flex col">
+        <i class="fa-solid fa-magnifying-glass"></i>
         <span class="text-[8px]">
-            문제 목록
+            검색
         </span>
     </a>
     <a th:href="@{/member/mypage}" class="flex col">
