--- a/src/main/resources/templates/usr/search/top/search.html
+++ b/src/main/resources/templates/usr/search/top/search.html
@@ -5,7 +5,7 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center mb-12">
 
     <form th:replace="~{usr/search/fragment/search/search :: search(${searchForm})}"></form>
-
+    <div th:replace="~{usr/search/fragment/search/content :: content(${books})}"></div>
 
 </div>
 </html>
