refactor: 회원가입 중복 체크 추가

--- a/src/main/resources/static/common/common.css
+++ b/src/main/resources/static/common/common.css
@@ -42,7 +42,19 @@ html > body {
     max-width: 100px; /* 텍스트 영역의 최대 너비 설정 */
 }
 
-#memailconfirmTxt {
+#emailConfirmCheck-before {
+    color: black;
+    font-weight: bold;
+    font-size: 10px;
+}
+
+#usernameMessage {
+    color: black;
+    font-weight: bold;
+    font-size: 10px;
+}
+
+#nicknameMessage {
     color: black;
     font-weight: bold;
     font-size: 10px;
