--- a/src/main/resources/static/common/common.css
+++ b/src/main/resources/static/common/common.css
@@ -59,3 +59,15 @@ html > body {
     font-weight: bold;
     font-size: 10px;
 }
+
+#passwordMessage {
+    color: black;
+    font-weight: bold;
+    font-size: 10px;
+}
+
+#repasswordMessage {
+    color: black;
+    font-weight: bold;
+    font-size: 10px;
+}
