fix: underline 문제 해결

--- a/src/main/resources/templates/usr/index.html
+++ b/src/main/resources/templates/usr/index.html
@@ -6,7 +6,7 @@
 
     <div th:replace="~{usr/home/fragment/index/login :: login}"></div>
     <div th:replace="~{usr/home/fragment/index/books :: books(${books})}"></div>
-    <div th:replace="~{usr/home/fragment/index/play :: play}"></div>
+<!--    <div th:replace="~{usr/home/fragment/index/play :: play}"></div>-->
     <div th:replace="~{usr/home/fragment/index/note :: note}"></div>
 
 
