--- a/src/main/resources/templates/usr/member/join.html
+++ b/src/main/resources/templates/usr/member/join.html
@@ -7,94 +7,54 @@
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <script>
         emailConfirmCheck = false;
+        var usernameCheck = document.getElementById("usernameHiddenInput").value;
+        var passwordCheck = document.getElementById("passwordHiddenInput").value;
+        var repasswordCheck = document.getElementById("repasswordHiddenInput").value;
+        // emailCheck = document.getElementById("emailHiddenInput").value;
+        var nicknameCheck = document.getElementById("nicknameHiddenInput").value;
 
         function JoinForm__submit(form) {
             // username 이(가) 올바른지 체크
-
-            form.username.value = form.username.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
-
-            if (form.username.value.length == 0) {
-                toastWarning('아이디를 입력해주세요.');
-                form.username.focus();
-                return;
-            }
-
-            if (form.username.value.length < 4) {
-                toastWarning('아이디를 4자 이상 입력해주세요.');
+            if (usernameCheck === 'no') {
+                toastWarning('아이디를 다시 확인해주세요.');
                 form.username.focus();
                 return;
             }
 
             // password 이(가) 올바른지 체크
-
-            form.password.value = form.password.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
-
-            if (form.password.value.length == 0) {
+            if (passwordCheck === 'no') {
                 form.password.focus();
-                toastWarning('비밀번호를 입력해주세요.');
+                toastWarning('비밀번호를 다시 확인해주세요');
                 return;
             }
 
-            if (form.password.value.length < 4) {
-                toastWarning('비밀번호를 4자 이상 입력해주세요.');
+            // repassword 이(가) 올바른지 체크
+            if (repasswordCheck === 'no') {
                 form.password.focus();
-                return;
-            }
-
-            // email 이(가) 올바른지 체크
-
-            form.email.value = form.email.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
-
-            if (form.email.value.length == 0) {
-                form.email.focus();
-                toastWarning('이메일을 입력해주세요.');
+                toastWarning('비밀번호 확인을 다시 확인해주세요');
                 return;
             }
 
             // 인증번호 이(가) 올바른지 체크
-
-            form.code.value = form.code.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
-
-            if (form.code.value.length == 0) {
-                toastWarning('인증번호를 입력해주세요.');
-                form.code.focus();
-                return;
-            }
-
-            if (form.code.value.length != 8) {
-                toastWarning('인증번호는 8자리입니다.');
-                form.code.focus();
-                return;
-            }
-
-            if (emailConfirmCheck == false) {
-                toastWarning('인증번호가 잘못되었습니다.');
+            if (!emailConfirmCheck) {
+                toastWarning('인증번호를 다시 확인해주세요.');
                 form.code.focus();
                 return;
             }
 
             // 닉네임 이(가) 올바른지 체크
-
-            form.nickname.value = form.nickname.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
-
-            if (form.nickname.value.length == 0) {
-                toastWarning('닉네임을 입력해주세요.');
-                form.nickname.focus();
-                return;
-            }
-
-            if (form.nickname.value.length < 4) {
-                toastWarning('닉네임을 4자 이상 입력해주세요.');
+            if (nicknameCheck === 'no') {
+                toastWarning('닉네임을 다시 확인해주세요.');
                 form.nickname.focus();
                 return;
             }
 
             form.submit(); // 폼 발송
         }
-
+    </script>
+    <script>
         $(function() {
             var $email = $("#email");
-
             var $checkEmail = $("#checkEmail"); // 인증번호 발송 버튼
             var $emailConfirm = $("#emailConfirm"); // 인증번호 확인input
             var $emailConfirmTxt = $("#emailConfirmTxt"); // 인증번호 확인 txt
@@ -111,7 +71,7 @@
                         toastNotice('해당 이메일로 인증번호 발송이 완료되었습니다.<br>확인부탁드립니다.');
                         console.log("data : " + data);
                         $("#emailConfirm").prop("disabled", false);
-                        chkEmailConfirm(data, $emailConfirm, $emailConfirmTxt);
+                        checkEmailConfirm(data, $emailConfirm, $emailConfirmTxt);
                     },
                     error: function() {
                         toastWarning('인증번호 발송에 실패했습니다.<br>다시 시도해주세요.');
@@ -121,7 +81,7 @@
             })
 
             // 이메일 인증번호 체크 함수
-            function chkEmailConfirm(data, $emailConfirm, $emailConfirmTxt) {
+            function checkEmailConfirm(data, $emailConfirm, $emailConfirmTxt) {
                 $emailConfirm.on("keyup", function () {
                     if (data != $emailConfirm.val()) { //
                         emailConfirmCheck = false;
@@ -148,6 +108,78 @@
             }
         });
     </script>
+    <script>
+        function checkDuplicate(field) {
+            var inputId = field + 'Input';
+            var value = document.getElementById(inputId).value;
+
+            return $.ajax({
+                url: "/member/checkDuplicate/" + field,
+                type: "POST",
+                dataType: "text",
+                data: JSON.stringify({ "value": value }),
+                contentType: "application/json"
+            });
+        }
+
+        function checkLength(field) {
+            var inputId = field + 'Input';
+            var value = document.getElementById(inputId).value;
+
+            return $.ajax({
+                url: "/member/checkLength/" + field,
+                type: "POST",
+                dataType: "text",
+                data: JSON.stringify({ "value": value }),
+                contentType: "application/json"
+            });
+        }
+
+        function changeTextAndColor(field) {
+            var messageLabel = document.getElementById(field + 'Message');
+            var hiddenInput = document.getElementById(field + "HiddenInput");
+
+            $.when(checkDuplicate(field), checkLength(field)).done(function(duplicateResult, lengthResult) {
+                var duplicateResponse = duplicateResult[0];
+                var lengthResponse = lengthResult[0];
+
+                console.log('응답성공(중복체크) = ' + duplicateResponse);
+                console.log('응답성공(길이체크) = ' + lengthResponse);
+
+                var checkDuplicateOk = duplicateResponse === '사용 가능한 ' + field + '입니다.';
+                var checkLengthOk = lengthResponse === '사용 가능한 ' + field + '입니다.';
+
+                if (checkDuplicateOk && checkLengthOk) {
+                    messageLabel.innerHTML = '사용 가능합니다.';
+                    messageLabel.style.color = '#0D6EFD';
+                    hiddenInput.value = 'ok';
+                } else {
+                    messageLabel.innerHTML = '사용 불가능합니다.';
+                    messageLabel.style.color = '#FA3E3E';
+                    hiddenInput.value = 'no';
+                }
+            }).fail(function(error) {
+                console.error(error);
+            });
+        }
+
+        function checkRepassword() {
+            var password = document.getElementById('passwordInput').value;
+            var repassword = document.getElementById('repasswordInput').value;
+            var messageLabel = document.getElementById('repasswordMessage');
+            var hiddenInput = document.getElementById('repasswordHiddenInput');
+
+            if(password === repassword) {
+                messageLabel.innerHTML = '비밀번호가 일치합니다.';
+                messageLabel.style.color = '#0D6EFD';
+                hiddenInput.value = 'ok';
+            } else {
+                messageLabel.innerHTML = '비밀번호가 일치하지 않습니다.';
+                messageLabel.style.color = '#FA3E3E';
+                hiddenInput.value = 'no';
+            }
+        }
+    </script>
 
     <div class="flex flex-col justify-center items-center">
 
@@ -160,30 +192,63 @@
             </div>
         </div>
         <form th:action method="POST" class="p-10 flex flex-col gap-4" onsubmit="JoinForm__submit(this); return false;">
+            <!-- 아이디 -->
             <div class="mb-3">
-                <input type="text" name="username" maxlength="30" placeholder="아이디를 입력해주세요." class="input input-bordered">
+                <div class="flex gap-2 items-center">
+                    <input type="text" name="username" id="usernameInput" placeholder="아이디를 입력해주세요." class="input input-bordered"
+                           onblur="changeTextAndColor('username');">
+                    <input type="hidden" id="usernameHiddenInput" value=""/>
+                </div>
+                <label for="usernameInput" id="usernameMessage">영문, 숫자만 가능하며 4 ~ 12자리까지 가능합니다.</label>
             </div>
+            <!-- 비밀번호 -->
             <div class="mb-3">
-                <input type="password" name="password" maxlength="30" placeholder="비밀번호를 입력해주세요." class="input input-bordered">
+                <div class="flex gap-2 items-center">
+                    <input type="password" name="password" id="passwordInput" placeholder="비밀번호를 입력해주세요." class="input input-bordered"
+                           onblur="changeTextAndColor('password');" onkeyup="checkRepassword()">
+                    <input type="hidden" id="passwordHiddenInput" value=""/>
+                </div>
+                <label for="passwordInput" id="passwordMessage">영문, 숫자, 특수기호를 꼭 포함하는 8 ~ 15자리입니다.</label>
             </div>
-
-            <div>
+            <!-- 비밀번호 확인 -->
+            <div class="mb-3">
+                <div class="flex gap-2 items-center">
+                    <input type="password" name="repassword" id="repasswordInput" placeholder="비밀번호를 다시 입력해주세요." class="input input-bordered"
+                           onblur="checkRepassword();" onkeyup="checkRepassword()">
+                    <input type="hidden" id="repasswordHiddenInput" value=""/>
+                </div>
+                <label for="repasswordInput" id="repasswordMessage">비밀번호를 다시 입력해주세요.</label>
+            </div>
+            <!-- 이메일 -->
+            <div class="flex gap-2 items-center">
                 <input type="text" class="input input-bordered" name="email" id="email" placeholder="이메일을 입력해주세요.">
+                <button class="btn btn-accent btn-xs" type="button" id="checkEmail">인증하기</button>
             </div>
-            <button class="btn btn-accent" type="button" id="checkEmail">인증번호 발송</button>
+            <!-- 인증번호 -->
             <div class="flex flex-col">
-                <label for="emailConfirm" id="emailConfirmTxt">인증번호를 입력해주세요.</label>
                 <input type="text" class="input input-bordered" name="code" id="emailConfirm" placeholder="인증번호는 8자리 입니다." disabled>
+                <label for="emailConfirm" id="emailConfirmTxt">
+                    <span id="emailConfirmCheck-before">인증번호를 입력해주세요.</span>
+                </label>
             </div>
-
+            <!-- 닉네임 -->
             <div class="mb-3">
-                <input type="text" name="nickname" maxlength="30" placeholder="닉네임를 입력해주세요." class="input input-bordered">
+                <div class="flex gap-2 items-center">
+                    <input type="text" name="nickname" id="nicknameInput" placeholder="닉네임를 입력해주세요." class="input input-bordered"
+                           onblur="changeTextAndColor('nickname');">
+                    <input type="hidden" id="nicknameHiddenInput" value=""/>
+                </div>
+                <label for="nicknameInput" id="nicknameMessage">영문, 숫자, 한글로 구성된 2 ~ 8자리입니다.</label>
             </div>
             <div class="mb-1">
                 <input type="submit" value="가입완료" class="btn btn-block btn-primary">
             </div>
         </form>
     </div>
+
+    <div class="mt-5"></div>
+    <div class="mt-5"></div>
+    <div class="mt-5"></div>
 
 </div>
 </html>
