--- a/src/main/resources/templates/usr/book/fragment/create/form.html
+++ b/src/main/resources/templates/usr/book/fragment/create/form.html
@@ -16,18 +16,13 @@
                     <div class="flex justify-center">
                         <div class="mb-5">
 
-                            <img th:if="${bookCreateForm.img == null}"
-                                 class="h-48 w-40" id="img"
+                            <img class="h-48 w-40" id="img"
                                  src="/images/note/0004.jpg">
-
-                            <img th:if="${bookCreateForm.img != null}"
-                                 class="h-32 w-24" id="img"
-                                 th:src="@{${bookCreateForm.img}}">
                         </div>
                     </div>
 
                     <div class="flex flex-col mb-5">
-                        <input type="file" th:field="*{img}"
+                        <input type="file" id="fileInput" name="img"
                                class="file-input file-input-bordered w-full file-input-xs max-w-xs"/>
                     </div>
 
