feat: 문제집 이름으로 검색 기능 구현 완료

--- a/src/main/resources/templates/usr/search/fragment/search/content.html
+++ b/src/main/resources/templates/usr/search/fragment/search/content.html
@@ -1,5 +1,5 @@
 <div th:fragment="content(books)"
-     class="flex gap-4 flex-wrap justify-center mt-3">
+     class="flex gap-4 flex-wrap justify-center mt-3 mb-12">
 
     <div th:each="book : ${books}"
          th:object="${book}"
