--- a/src/main/resources/templates/usr/search/fragment/search/search.html
+++ b/src/main/resources/templates/usr/search/fragment/search/search.html
@@ -1,5 +1,5 @@
 <form th:fragment="search(searchForm)"
-      method="get" action="/search/book"
+      method="get" action="/search/book/name"
       th:object="${searchForm}"
       onsubmit="JoinForm__submit(this); return false;">
 
@@ -13,7 +13,6 @@
             <button class="btn btn-square btn-sm w-24">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
-
 
         </label>
 
