--- a/src/main/resources/templates/usr/search/fragment/book/page.html
+++ b/src/main/resources/templates/usr/search/fragment/book/page.html
@@ -3,21 +3,21 @@
      class="join mb-12 flex">
 
     <a th:if="*{page > 1}"
-       th:href="@{/search/book(page=0, input=${input})}"
+       th:href="@{/search/book/name(page=0, input=${input})}"
        class="join-item btn btn-xs mr-2"><i class="fa-solid fa-chevron-left"></i></a>
 
     <a th:if="*{page > 0}"
-       th:href="@{/search/book(page=*{page - 1}, input=${input})}"
+       th:href="@{/search/book/name(page=*{page - 1}, input=${input})}"
        class="join-item btn btn-xs" th:text="*{page}"></a>
 
     <a class="join-item btn btn-primary btn-square btn-xs" th:text="*{page + 1}" ></a>
 
-    <a th:if="*{page < count - 1}"
-       th:href="@{/search/book(page=*{page + 1}, input=${input})}"
+    <a th:if="*{page < ((count / 7) - 1)}"
+       th:href="@{/search/book/name(page=*{page + 1}, input=${input})}"
        class="join-item btn btn-xs" th:text="*{page + 2}"></a>
 
-    <a th:if="*{page < count - 2}"
-       th:href="@{/search/book(page=*{count - 1}, input=${input})}"
+    <a th:if="*{page < ((count / 7) - 2)}"
+       th:href="@{/search/book/name(page=*{count - 1}, input=${input})}"
        class="join-item btn btn-xs ml-2"><i class="fa-solid fa-chevron-right"></i></a>
 
 </div>
