--- a/src/main/resources/templates/usr/search/top/category.html
+++ b/src/main/resources/templates/usr/search/top/category.html
@@ -4,11 +4,11 @@
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center mb-12">
 
-  <form th:replace="~{usr/search/fragment/bookTag/search :: search(${searchForm})}"></form>
+  <form th:replace="~{usr/search/fragment/category/search :: search(${searchForm})}"></form>
   <div th:replace="~{usr/search/fragment/book/tab :: tab(${searchForm})}"></div>
 
-  <div th:replace="~{usr/search/fragment/book/content :: content(${books.contents})}"></div>
-  <div th:replace="~{usr/search/fragment/bookTag/page :: page(${books}, ${searchForm.input})}"></div>
+  <form th:replace="~{usr/search/fragment/category/content :: content(${categories.contents})}"></form>
+  <div th:replace="~{usr/search/fragment/book/page :: page(${categories}, ${searchForm.input})}"></div>
 
 </div>
 </html>
