test: 태그, 이름 한번에 검색하는 기능 구현 / 테스트 완료

--- a/src/main/resources/templates/usr/search/top/category.html
+++ b/src/main/resources/templates/usr/search/top/category.html
@@ -7,7 +7,7 @@
   <form th:replace="~{usr/search/fragment/category/search :: search(${searchForm})}"></form>
   <div th:replace="~{usr/search/fragment/book/tab :: tab(${searchForm})}"></div>
 
-  <form th:replace="~{usr/search/fragment/category/content :: content(${categories.contents})}"></form>
+  <table th:replace="~{usr/search/fragment/category/content :: content(${categories.contents})}"></table>
   <div th:replace="~{usr/search/fragment/book/page :: page(${categories}, ${searchForm.input})}"></div>
 
 </div>
