--- a/src/main/resources/templates/usr/search/fragment/book/tab.html
+++ b/src/main/resources/templates/usr/search/fragment/book/tab.html
@@ -11,7 +11,8 @@
   <a th:href="@{/search/category(input=*{input})}"
      class="tab tab-xs" th:classappend="*{code eq 2}? 'tab-active'">카테고리</a>
 
-  <a class="tab tab-xs" th:classappend="*{code eq 3}? 'tab-active'">문제</a>
+  <a th:href="@{/search/question(input=*{input})}"
+     class="tab tab-xs" th:classappend="*{code eq 3}? 'tab-active'">문제</a>
 
   <a class="tab tab-xs" th:classappend="*{code eq 4}? 'tab-active'">회원</a>
 
