--- a/src/main/resources/templates/usr/home/fragment/index/login.html
+++ b/src/main/resources/templates/usr/home/fragment/index/login.html
@@ -2,7 +2,7 @@
      th:if="${@rq.logout}" class="max-w-md h-24 mt-5">
   <div class="stats shadow w-80 h-full">
     <div class="stat place-items-center">
-      <div class="text-sm mb-2">로그인 하고 문제 풀기</div>
+      <div class="text-sm mb-2">1초만에 가입하고 문제 풀기</div>
 
       <div class="flex gap-5">
         <a class="btn btn-circle btn-sm" style="border: none;" href="/oauth2/authorization/github">
