--- a/src/main/resources/templates/usr/index.html
+++ b/src/main/resources/templates/usr/index.html
@@ -8,9 +8,10 @@
 
     <div th:if="${@rq.login}">
         <div class="mt-5">나의 문제집</div>
-        <div th:replace="~{usr/home/fragment/index/books :: books(${books})}"></div>
+        <div th:replace="~{usr/home/fragment/index/books :: books(${myBooks})}"></div>
     </div>
 
+    <div th:replace="~{usr/home/fragment/index/popular :: popular(${books})}"></div>
 
 </div>
 </html>
