fix: 문제 상세페이지 안나오는 문제 해결

--- a/src/main/resources/templates/usr/home/fragment/index/books.html
+++ b/src/main/resources/templates/usr/home/fragment/index/books.html
@@ -76,7 +76,7 @@
                 <div class="stat place-items-center">
                     <div class="stat-title">나만의 문제집 만들기</div>
                     <div class="text-xs">밑줄 문제 묶음을 만들어 보세요!</div>
-                    <div class="stat-desc"></div>
+                    <div></div>
                 </div>
             </div>
         </a>
