--- a/src/main/resources/templates/usr/question/fragment/detail/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/nav.html
@@ -1,7 +1,7 @@
 <div th:fragment="nav(tags, question, underlineCreateForm, books)"
      class="mb-12 flex flex-col gap-5">
 
-    <div class="flex justify-center mt-5">
+    <div class="flex justify-center mt-5 gap-2">
         <span th:each="tag : ${tags}"
               class="badge" th:text="|# ${tag.tag}  |"></span>
     </div>
@@ -9,7 +9,7 @@
     <div class="flex justify-center mt-3 mb-10 gap-5">
 
         <a th:href="@{/question/list/{id}(id=${question.category.id})}">
-            <i class="fa-solid fa-chevron-left"></i></a>
+            <i class="fa-solid fa-arrow-left-long"></i></i></a>
 
         <span th:replace="~{usr/question/fragment/detail/underline :: underline(${question}, ${underlineCreateForm}, ${books})}"></span>
 
