--- a/src/main/resources/templates/usr/underline/top/book.html
+++ b/src/main/resources/templates/usr/underline/top/book.html
@@ -6,7 +6,9 @@
 
     <div th:replace="~{usr/underline/fragment/book/title :: title(${book})}"></div>
 
-    <form th:replace="~{usr/underline/fragment/book/table :: table(${underlines}, ${mcq})}"></form>
+    <div class="w-80">
+        <form th:replace="~{usr/underline/fragment/book/table :: table(${underlines}, ${mcq})}"></form>
+    </div>
 
     <div th:if="${underlines.size eq 0}" class="flex justify-center">
         <div>문제집에 문제가 없습니다.</div>
