--- a/src/main/resources/templates/usr/search/fragment/search/content.html
+++ b/src/main/resources/templates/usr/search/fragment/search/content.html
@@ -1,9 +1,10 @@
 <div th:fragment="content(books)"
      class="flex gap-4 flex-wrap justify-center mt-3 mb-12">
 
-    <div th:each="book : ${books}"
-         th:object="${book}"
-         class="w-24 mb-3">
+    <a th:each="book : ${books}"
+       th:href="@{/underline/book/{id}(id=${book.id})}"
+       th:object="${book}"
+       class="w-24 mb-3">
 
         <figure class="h-32">
             <img th:if="${book.img eq null}"
@@ -23,7 +24,7 @@
                 <div class="stat-desc" th:text="${book.recommend}"></div>
             </div>
         </div>
-    </div>
+    </a>
 
     <div class="carousel-item w-24 h-40 mb-3">
 
