--- a/src/main/resources/templates/usr/underline/top/book.html
+++ b/src/main/resources/templates/usr/underline/top/book.html
@@ -10,8 +10,8 @@
         <form th:replace="~{usr/underline/fragment/book/table :: table(${underlines}, ${mcq})}"></form>
     </div>
 
-    <div th:if="${underlines.size eq 0}" class="flex justify-center">
-        <div>문제집에 문제가 없습니다.</div>
+    <div th:if="${underlines.size eq 0}" class="mt-10">
+        문제집에 문제가 없습니다.
     </div>
 
 </div>
