--- a/src/main/resources/templates/usr/search/fragment/question/content.html
+++ b/src/main/resources/templates/usr/search/fragment/question/content.html
@@ -1,5 +1,5 @@
 <table th:fragment="content(questions, mcq)"
-       class="mt-5 table w-full">
+       class="mt-5 table w-full mb-5">
 
     <thead>
     </thead>
@@ -10,11 +10,11 @@
         th:object="${question}">
 
         <td>
-            <a th:text="${loop.count}" class="text-sm"
+            <a th:text="*{category.name}" class="text-xs"
                th:href="@{/question/detail/{id}(id=*{id})}"></a>
         </td>
 
-        <td class="w-40">
+        <td class="flex-grow">
             <a th:text="*{name}" class="text-xs"
                th:href="@{/question/detail/{id}(id=*{id})}"></a>
         </td>
@@ -25,7 +25,7 @@
             </a>
         </td>
         <td>
-            <a th:text="(*{type} == ${mcq})? '객관식':'주관식'"
+            <a th:text="(*{type} == ${mcq})? '객관식':'주관식'" class="text-xs"
                th:href="@{/question/detail/{id}(id=*{id})}"></a>
         </td>
     </tr>
