design: 카테고리 목록 선택시 문제 검색 페이지로 이동

--- a/src/main/resources/templates/usr/question/fragment/list/table.html
+++ b/src/main/resources/templates/usr/question/fragment/list/table.html
@@ -1,34 +1,40 @@
 <table th:fragment="table(category, mcq)"
-       class="mt-5 table w-full">
+       class="mt-5 table w-full drop-shadow-lg mb-12">
 
-  <thead>
-  </thead>
+    <thead>
+    <tr>
+        <td class="flex justify-between">
+            <div>문제 목록</div>
+            <div th:text="|총 ${category.questions.size} 문제|"></div>
+        </td>
+    </tr>
+    </thead>
 
-  <tbody>
-  <tr class="hover flex"
-      th:each="question, loop : ${category.questions}"
-      th:object="${question}">
+    <tbody>
+    <tr class="hover flex"
+        th:each="question, loop : ${category.questions}"
+        th:object="${question}">
 
-    <td>
-      <a th:text="${loop.count}" class="text-sm"
-         th:href="@{/question/detail/{id}(id=*{id})}"></a>
-    </td>
+        <td>
+            <a th:text="${loop.count}" class="text-sm"
+               th:href="@{/question/detail/{id}(id=*{id})}"></a>
+        </td>
 
-    <td class="w-40">
-      <a th:text="*{name}" class="text-xs"
-         th:href="@{/question/detail/{id}(id=*{id})}"></a>
-    </td>
+        <td class="grow">
+            <a th:text="*{name}" class="text-xs"
+               th:href="@{/question/detail/{id}(id=*{id})}"></a>
+        </td>
 
-    <td>
-      <a th:href="@{/question/detail/{id}(id=*{id})}">
-        <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${question})}"></div>
-      </a>
-    </td>
-    <td>
-      <a th:text="(*{type} == ${mcq})? '객관식':'주관식'"
-         th:href="@{/question/detail/{id}(id=*{id})}"></a>
-    </td>
-  </tr>
-  </tbody>
+        <td>
+            <a th:href="@{/question/detail/{id}(id=*{id})}">
+                <div th:replace="~{usr/question/fragment/detail/difficulty :: difficulty(${question})}"></div>
+            </a>
+        </td>
+        <td>
+            <a th:text="(*{type} == ${mcq})? '객관식':'주관식'" class="xs"
+               th:href="@{/question/detail/{id}(id=*{id})}"></a>
+        </td>
+    </tr>
+    </tbody>
 
 </table>
