--- a/src/main/resources/templates/usr/question/fragment/detail/nav.html
+++ b/src/main/resources/templates/usr/question/fragment/detail/nav.html
@@ -8,7 +8,7 @@
 
     <div class="flex justify-center mt-3 mb-10 gap-5">
 
-        <a th:href="@{/question/list/{id}(id=${question.category.id})}">
+        <a th:href="@{/search/category/{id}(id=${question.category.id})}">
             <i class="fa-solid fa-arrow-left-long"></i></i></a>
 
         <span th:replace="~{usr/question/fragment/detail/underline :: underline(${question}, ${underlineCreateForm}, ${books})}"></span>
