--- a/src/main/resources/templates/usr/question/top/list.html
+++ b/src/main/resources/templates/usr/question/top/list.html
@@ -2,15 +2,14 @@
 
 <head><title th:text="|${category.name} 문제 목록|"></title></head>
 
-<div layout:fragment="content" class="min-h-screen flex flex-col mb-12">
+<div layout:fragment="content" class="min-h-screen flex flex-col items-center mb-12 bg-base-300">
 
     <div th:text="${category.about}" class="ml-10"></div>
 
-    <div class="mt-5 flex justify-center">
-        <form th:replace="~{usr/category/fragment/list/search :: search(${questionSearchForm})}"></form>
-    </div>
 
-    <form th:replace="~{usr/question/fragment/list/table :: table(${category}, ${mcq})}"></form>
+    <div class="w-80">
+        <table th:replace="~{usr/question/fragment/list/table :: table(${category}, ${mcq})}"></table>
+    </div>
 
     <div th:if="${@rq.login}"
          class="flex justify-end mb-12 mt-5">
